# a2a-session-manager

./: README.md  hello.py  pyproject.toml
cli/: demo_cli.py  demo_deep_researcher.py
examples/: demo_llm_plan.py  demo_llm_plan_autotools.py  demo_plan_lifecycle.py  example_infinite_conversation.py  fastapi_session_example.py  graph_model_example.py  integrated_demo.py  openai_tool_demo.py  project_session_example_usage.py  retry_prompt_demo.py  run_plan_executor.py  session_aware_tool_processor.py  session_example.py  session_example_usage.py  session_prompt_builder.py  session_token_usage_example.py  tool_calling_example_usage.py
src/a2a_graph/: __init__.py  graph_aware_tool_processor.py  plan_executor.py  planner.py  processor.py
src/a2a_graph/agents/: graph_plan_agent.py  plan_agent.py
src/a2a_graph/demo/: __init__.py  demo_graph_processor.py  demo_planner_demo.py  llm_simulator.py  tools.py
src/a2a_graph/graph/: node_manager.py
src/a2a_graph/models/: __init__.py  base.py  execution.py  messages.py  meta.py  planning.py  session.py
src/a2a_graph/planner/: __init__.py  _ids.py  _persist.py  _step_tree.py  plan.py  plan_executor.py
src/a2a_graph/store/: __init__.py  base.py  memory.py
src/a2a_graph/utils/: __init__.py  pretty.py  registry_helpers.py  visualization.py
src/a2a_session_manager/: exceptions.py  infinite_conversation.py  session_aware_tool_processor.py  session_prompt_builder.py  storage.py
src/a2a_session_manager/models/: __init__.py  access_control.py  access_levels.py  project.py  session.py  session_event.py  session_metadata.py  session_run.py  token_usage.py
src/a2a_session_manager/storage/: __init__.py  base.py
src/chuk_session_manager/: __init__.py
src/chuk_tool_processor/: tool_registry.py
src/chuk_tool_processor/execution/: inprocess_strategy.py  subprocess_strategy.py  tool_executor.py
src/chuk_tool_processor/models/: tool_result.py
src/chuk_tool_processor/plugins/: function_call_tool.py
src/sample_tools/: search_tool.py  visit_url_tool.py  weather_tool.py
tests/: conftest.py  test_infinite_conversation.py  test_infinite_conversation_advanced.py  test_session_aware_tool_processor.py  test_session_prompt_builder.py
tests/a2a_graph/graph/: test_node_manager.py
tests/models/: test_access_control.py  test_access_levels.py  test_event_source.py  test_event_type.py  test_project.py  test_session.py  test_session_event.py  test_session_metadata.py  test_session_run.py  test_token_usage.py
tests/storage/: test_base.py
tests/tool_processor/: test_tool_executor.py
(+25 files in other folders)
