[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-session-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chuk-tool-processor>=0.1.2",
    "colorama>=0.4.6",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "openai>=1.76.0",
    "pydantic>=2.11.3",
]

# Tell setuptools to look in src/ for your a2a package
[tool.setuptools.packages.find]
where   = ["src"]
include = ["a2a_session_manager*"]

# pytest settings so it finds your src/ layout automatically
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
