[build-system]
requires    = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a2a-session-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.7",
    "chuk-tool-processor>=0.1.2",
    "colorama>=0.4.6",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "openai>=1.76.0",
    "pydantic>=2.11.3",
    "readability-lxml>=0.8.1",
    "requests>=2.32.3",
    "tiktoken>=0.9.0",
    "trafilatura>=2.0.0",
]

# Tell setuptools to look in src/ for your a2a package
[tool.setuptools.packages.find]
where   = ["src"]
include = ["a2a_session_manager*"]

# pytest settings so it finds your src/ layout automatically
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
